[package]
name = "tvdb-v2"
version = "0.1.0"
authors = ["Mohammad AlSaleh <CE.Mohammad.AlSaleh@gmail.com>"]
description = "Rust interface for TVDB's JSON API v2 (with a sample interactive CLI tool)"
documentation = "https://docs.rs/tvdb-v2"
homepage = "https://github.com/MoSal/tvdb-v2-rs"
repository = "https://github.com/MoSal/tvdb-v2-rs"
readme = "README.md"
keywords = ["api", "tvdb", "TheTVDB", "tv", "media", "cli", "command-line"]
categories = ["API bindings", "Command line utilities"]
license = "MPL 2.0"
edition = "2021"

[dependencies]
serde = { version="^1.0.137", features=["derive"] }
serde_json = "^1.0.81"
pretty_env_logger = "^0.4.0"
isahc = { version="^1.7.2", default_features=false, features=["http2"] }
futures-lite = "^1.12.0"
once_cell = "^1.12.0"
async-trait = "^0.1.56"
async-global-executor = "^2.2.0"
